--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,8 @@ tokio = { version = "0.2", features = ["net", "stream", "time"] }
 tokio-byteorder = "0.2"
 futures = "0.3"
 uuid = { version  = "0.7", features = [ "v4", "serde" ] }
-bytes = "0.4"
-protobuf = { version = "=2.8.1", features = ["with-bytes"] }
+bytes = "0.5"
+protobuf = { version = "2.10", features = ["with-bytes"] }
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
@@ -40,7 +40,7 @@ vec1 = "1.4"
 rand = "0.7"
 
 [build-dependencies]
-protoc-rust = "=2.8.1"
+protoc-rust = "2.10"
 
 [[test]]
 name = "integration"
